<resources>
    <string name="sceneview_tap_on_surface">Tap on a surface to place an object.</string>
    <string name="sceneview_insufficient_features_message">Can\'t find anything.\nAim device at a surface with more texture or color.</string>
    <string name="sceneview_excessive_motion_message">Moving too fast.\nSlow down</string>
    <string name="sceneview_insufficient_light_message">Too dark.\nTry moving to a well-lit area.</string>
    <string name="sceneview_insufficient_light_android_s_message">Too dark. Try moving to a well-lit area.\nAlso, make sure the Block Camera is set to off in system settings.</string>
    <string name="sceneview_bad_state_message">Tracking lost due to bad internal state.\nPlease try restarting the AR experience.</string>
    <string name="sceneview_camera_unavailable_message">Another app is using the camera.\nTap on this app or try closing the other one.</string>
    <string name="sceneview_unknown_tracking_failure">Unknown tracking failure reason: %1$s</string>
    <string name="sceneview_camera_permission_required">Camera permission required</string>
    <string name="scroll">Scroll</string>
    <string name="encabezado">Encabezado</string>

<!--    IMAGE-->
    <string name="manati">Manati</string>
    <string name="lazaro">Lazaro</string>
    <string name="monumento_a_la_mujer">Monumento_a_la_Mujer</string>
    <string name="mini_manati">Manati</string>
    <string name="mini_lazaro">Lazaro</string>
    <string name="mini_monumento_a_la_mujer">Monumento_a_la_Mujer</string>

    <string name="monumento_del_manati">Monumento del Manati</string>
    <string name="monumento_lazaro_cardenas">Monumento Lazaro Cardenas</string>
    <string name="monumento_mujer">Monumento a la Mujer</string>

<!--    TEXT Descripcion-->
    <string name="manati_desc">Esta atracción turística se encuentra frente a la bella Bahía de Chetumal, entre el Centro Internacional de Convenciones y la Universidad de Quintana Roo (UQROO), fue inaugurada en 1996 con el objetivo de darle realce al Boulevard Bahía y conmemorar a los Manatíes, los amigables mamíferos acuáticos que abundan en la Bahía, la cual fue decretada como santuario del Manatí.</string>

    <string name="lazaro_desc">Esta obra artística se encuentra en la glorieta del cruce del boulevard Bahía y la calzada Veracruz en la ciudad de Chetumal, fue erigida en honor a Lázaro Cárdenas, presidente de México en los años 1934-1940, quien se caracterizó por realizar importantes acciones de gobierno como la reforma agraria, la creación de los ejidos, así como la reincorporación de Quintana Roo como entidad federativa el 16 de enero de 1935, hecho por el cual se convirtió en personaje fundamental en la historia de Quintana Roo.</string>

    <string name="mujer_desc">Monumento inaugurado durante el gobierno de Aaron Merino Fernández (1958 - 1964), obra de artista H. Juárez. La estatura se encuentra esculpida sobre un cerro de prismas y caracteriza a la mujer chetumaleña aludiendo el traje típico que representa al estado de Quintana Roo, con imágenes representativas de la cultura Maya. Representando a la mujer quintanarroense, Ramon Valdiosera Berman fue quien diseño el traje inspirado en las llamadas "Mujeres de la isla Jaina" y creado por encargo de Carmen Ochoa de Merino.</string>
    <string name="img_monumento">img_monumento</string>
    <string name="monumento_3d">monumento_3d</string>
    <string name="como_llegar">Como llegar</string>
    <string name="presiona_la_imagen">Presiona la imagen</string>
    <string name="ddd">ddd</string>

</resources>