<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefef"
    tools:context=".VistaInfoModel">

    <!--Imagen de encabezado-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:contentDescription="@string/encabezado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_tec" />

    <!--Contenido-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/barra">

        <!--Imagen del modelo-->


        <TextView
            android:id="@+id/txt_presionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presiona_la_imagen"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/imgMonument"
            android:textSize="24sp"
            android:textColor="#000"
            android:fontFamily="sans-serif"/>

        <ImageView
            android:id="@+id/imgMonument"
            android:layout_width="220dp"
            android:layout_height="181dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/monumento_3d"
            android:layout_marginTop="20dp"/>



        <!--Informacion del modelo-->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/mapa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:text="@string/como_llegar"
            android:textStyle="italic"
            android:textSize="20sp"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ddd"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </ScrollView>

    </LinearLayout>

</LinearLayout>